Fixed background not covering entire page downwards

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   grid-template-columns: 151px 2fr 1fr;
   grid-template-rows: 96px auto;
   background-color: #f0f5fa;
-  height: 100vh;
+  height: 100%;
 }
 
 .ReactModal__Body--open,
